--- a/login.html
+++ b/login.html
@@ -1,133 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>BIGPRO Login</title>
+<title>Login</title>
 <style>
-*{box-sizing:border-box;font-family:Arial,sans-serif;}
-body{margin:0;background:#f6f7fb;}
-
-.header{
-background:linear-gradient(to right,#ff6b6b,#ff8a8a);
-color:white;
-padding:20px;
-text-align:center;
-}
-.header h1{
-margin:0;
-font-size:22px;
-font-weight:bold;
-}
-.header p{
-margin:6px 0 0;
-font-size:14px;
-font-weight:500;
-}
-
-.tabs{
-display:flex;
-background:white;
-}
-.tab{
-flex:1;
-text-align:center;
-padding:12px;
-font-weight:bold;
-color:#888;
-}
-.tab.active{
-color:#ff6b6b;
-border-bottom:3px solid #ff6b6b;
-}
-
-.container{
-padding:20px;
-}
-
-.label{
-margin-top:15px;
-font-weight:bold;
-color:#555;
-}
-
-.input-box{
-display:flex;
-align-items:center;
-background:white;
-border-radius:12px;
-padding:12px;
-margin-top:8px;
-box-shadow:0 2px 6px rgba(0,0,0,.05);
-}
-.input-box span{
-margin-right:8px;
-font-size:18px;
-}
-.input-box input{
-border:none;
-outline:none;
-width:100%;
-font-size:15px;
-font-weight:500;
-}
-
-.checkbox{
-margin:15px 0;
-color:#666;
-font-weight:500;
-}
-
-.btn{
-width:100%;
-padding:14px;
-border:none;
-border-radius:30px;
-font-size:18px;
-font-weight:bold;
-margin-top:10px;
-}
-
-.btn-main{
-background:linear-gradient(to right,#ff6b6b,#ff8a8a);
-color:white;
-}
-
-.btn-outline{
-background:white;
-border:2px solid #ff6b6b;
-color:#ff6b6b;
-}
-
-.service{
-text-align:center;
-margin-top:20px;
-color:#ff6b6b;
-font-weight:bold;
-}
-
-.chat{
-.chat{
-  position: fixed;
-  right: 15px;
-  bottom: 15px;
-  width: 50px;
-  height: 50px;
-  background: #ff6b6b;
-  color: white;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 22px;
-  z-index: 9999;
-  }
+body{margin:0;font-family:Arial;background:#f6f7f9}
+.header{background:linear-gradient(90deg,#ff6b6b,#ff8e8e);color:#fff;text-align:center;padding:25px}
+.tabs{display:flex}
+.tab{flex:1;text-align:center;padding:12px;border-bottom:2px solid #ddd}
+.tab.active{color:#ff6b6b;border-color:#ff6b6b}
+.box{padding:15px}
+.label{margin:12px 0 5px}
+.input{width:100%;padding:12px;border-radius:12px;border:1px solid #ddd}
+.btn-main{width:100%;padding:15px;border-radius:25px;border:none;background:linear-gradient(90deg,#ff6b6b,#ff8e8e);color:#fff;font-size:16px;margin-top:15px}
+.btn-outline{width:100%;padding:15px;border-radius:25px;border:2px solid #ff6b6b;background:#fff;color:#ff6b6b;margin-top:10px}
+.service{text-align:center;margin-top:15px;color:#ff6b6b}
+.chat{position:fixed;right:15px;bottom:15px;background:#ff6b6b;color:#fff;width:55px;height:55px;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:22px}
 </style>
 </head>
 <body>
 
 <div class="header">
-  <h1>Log in</h1>
+  <h2>Log in</h2>
   <p>Please log in with your phone number or email</p>
 </div>
 
@@ -136,31 +31,21 @@ font-weight:bold;
   <div class="tab">📧 Email Login</div>
 </div>
 
-<div class="container">
-
+<div class="box">
   <div class="label">📱 Phone number</div>
-  <div class="input-box">
-    <span>+91</span>
-    <input type="text" placeholder="Please enter the phone number">
-  </div>
+  <input class="input" placeholder="+91  Please enter the phone number">
 
   <div class="label">🔒 Password</div>
-  <div class="input-box">
-    <span>🔑</span>
-    <input type="password" placeholder="Please enter Password">
-  </div>
+  <input type="password" class="input" placeholder="Please enter Password">
 
-  <div class="checkbox">
-    <input type="checkbox"> Remember password
-  </div>
+  <p><input type="checkbox"> Remember password</p>
 
-  <button class="btn btn-main">Log in</button>
-  <button class="btn btn-outline" onclick="location.href='register.html'">Register</button>
+  <button class="btn-main">Log in</button>
+  <button class="btn-outline" onclick="location.href='register.html'">Register</button>
 
   <div class="service">🎧 Customer Service</div>
 </div>
 
 <div class="chat">💬</div>
-
 </body>
 </html>
