--- a/register.html
+++ b/register.html
@@ -40,7 +40,7 @@ body{margin:0;font-family:Arial;background:#f6f7f9}
   <div class="label">🎫 Invite code</div>
   <input class="input" placeholder="invite code">
 
-  <p><input type="checkbox" id=agree"> I have read and agree <span style="color:#ff6b6b">[Privacy Agreement]</span></p>
+  <p><input type="checkbox" id="agree"> I have read and agree <span style="color:#ff6b6b">[Privacy Agreement]</span></p>
 
   <button class="btn-main" id="registerBtn" disabled>Register</button>
 
@@ -52,15 +52,17 @@ body{margin:0;font-family:Arial;background:#f6f7f9}
 
 <div class="chat">💬</div>
 <script>
-var checkbox = document.getElementById("agree");
-var button = document.getElementById("registerBtn");
+document.addEventListener("DOMContentLoaded", function () {
+  var checkbox = document.getElementById("agree");
+  var button = document.getElementById("registerBtn");
 
-checkbox.addEventListener("change", function () {
-  if (checkbox.checked) {
-    button.disabled = false;
-  } else {
-    button.disabled = true;
-  }
+  checkbox.addEventListener("change", function () {
+    if (checkbox.checked) {
+      button.disabled = false;
+    } else {
+      button.disabled = true;
+    }
+  });
 });
 </script>
 </body>
