--- a/register.html
+++ b/register.html
@@ -40,9 +40,9 @@ body{margin:0;font-family:Arial;background:#f6f7f9}
   <div class="label">🎫 Invite code</div>
   <input class="input" placeholder="invite code">
 
-  <p><input type="checkbox"> I have read and agree <span style="color:#ff6b6b">[Privacy Agreement]</span></p>
+  <p><input type="checkbox" id="agree"> I have read and agree <span style="color:#ff6b6b">[Privacy Agreement]</span></p>
 
-  <button class="btn-main">Register</button>
+  <button class="btn-main"id="registerBtn">Register</button>
 
   <div class="bottom">
     I have an account 
