--- a/register.html
+++ b/register.html
@@ -9,12 +9,18 @@ body{margin:0;font-family:Arial;background:#f6f7f9}
 .header{background:linear-gradient(90deg,#ff6b6b,#ff8e8e);color:#fff;text-align:center;padding:25px}
 .title{text-align:center;color:#ff6b6b;margin:15px;font-weight:bold}
 .line{width:120px;height:3px;background:#ff6b6b;margin:0 auto}
-.box{padding:15px}
+.box{padding:15px;position:relative}
 .label{margin:12px 0 5px}
 .input{width:100%;padding:12px;border-radius:12px;border:1px solid #ddd}
-.btn-main{width:100%;padding:15px;border-radius:25px;border:none;background:linear-gradient(90deg,#ff6b6b,#ff8e8e);color:#fff;font-size:16px;margin-top:15px}
+.eye{position:absolute;right:25px;margin-top:-38px;cursor:pointer;font-size:18px}
+.btn-main{width:100%;padding:15px;border-radius:25px;border:none;
+background:linear-gradient(90deg,#ff6b6b,#ff8e8e);color:#fff;
+font-size:16px;margin-top:15px;opacity:.5}
+.btn-main:enabled{opacity:1}
 .bottom{text-align:center;margin-top:10px}
-.chat{position:fixed;right:15px;bottom:15px;background:#ff6b6b;color:#fff;width:55px;height:55px;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:22px}
+.chat{position:fixed;right:15px;bottom:15px;background:#ff6b6b;color:#fff;
+width:55px;height:55px;border-radius:50%;display:flex;
+align-items:center;justify-content:center;font-size:22px}
 </style>
 </head>
 <body>
@@ -29,20 +35,25 @@ body{margin:0;font-family:Arial;background:#f6f7f9}
 
 <div class="box">
   <div class="label">📱 Phone number</div>
-  <input class="input" placeholder="+91  Please enter the phone number">
+  <input class="input" id="phone" placeholder="+91  Please enter the phone number">
 
   <div class="label">🔒 Set password</div>
-  <input type="password" class="input" placeholder="Set password">
+  <input type="password" class="input" id="pass1" placeholder="Set password">
+  <span class="eye" id="eye1">👁️</span>
 
   <div class="label">🔒 Confirm password</div>
-  <input type="password" class="input" placeholder="Confirm password">
+  <input type="password" class="input" id="pass2" placeholder="Confirm password">
+  <span class="eye" id="eye2">👁️</span>
 
   <div class="label">🎫 Invite code</div>
-  <input class="input" placeholder="invite code">
+  <input class="input" id="invite" placeholder="invite code">
 
-  <p><input type="checkbox" id="agree"> I have read and agree <span style="color:#ff6b6b">[Privacy Agreement]</span></p>
+  <p>
+    <input type="checkbox" id="agree">
+    I have read and agree <span style="color:#ff6b6b">[Privacy Agreement]</span>
+  </p>
 
-  <button class="btn-main"id="registerBtn">Register</button>
+  <button class="btn-main" id="registerBtn" disabled>Register</button>
 
   <div class="bottom">
     I have an account 
@@ -51,5 +62,38 @@ body{margin:0;font-family:Arial;background:#f6f7f9}
 </div>
 
 <div class="chat">💬</div>
+
+<script>
+const pass1 = document.getElementById("pass1");
+const pass2 = document.getElementById("pass2");
+const eye1 = document.getElementById("eye1");
+const eye2 = document.getElementById("eye2");
+const agree = document.getElementById("agree");
+const btn = document.getElementById("registerBtn");
+
+eye1.onclick = () => {
+  pass1.type = pass1.type === "password" ? "text" : "password";
+}
+eye2.onclick = () => {
+  pass2.type = pass2.type === "password" ? "text" : "password";
+}
+
+agree.onchange = () => {
+  btn.disabled = !agree.checked;
+}
+
+btn.onclick = () => {
+  if(pass1.value === "" || pass2.value === "" || phone.value === ""){
+    alert("Please fill all fields");
+    return;
+  }
+  if(pass1.value !== pass2.value){
+    alert("Passwords do not match");
+    return;
+  }
+  alert("Registration Successful!");
+}
+</script>
+
 </body>
 </html>
