--- a/register.html
+++ b/register.html
@@ -39,11 +39,11 @@ align-items:center;justify-content:center;font-size:22px}
 
   <div class="label">🔒 Set password</div>
   <input type="password" class="input" id="pass1" placeholder="Set password">
-  <span class="eye" id="eye1">🙈</span>
+  <span class="eye" id="eye1">👁</span>
 
   <div class="label">🔒 Confirm password</div>
   <input type="password" class="input" id="pass2" placeholder="Confirm password">
-  <span class="eye" id="eye2">🙈</span>
+  <span class="eye" id="eye2">👁</span>
 
   <div class="label">🎫 Invite code</div>
   <input class="input" id="invite" placeholder="invite code">
