--- a/login.html
+++ b/login.html
@@ -7,68 +7,24 @@
 <style>
 *{box-sizing:border-box}
 body{margin:0;font-family:Arial;background:#f6f7f9}
-
-.header{
-  background:linear-gradient(90deg,#ff6b6b,#ff8e8e);
-  color:#fff;text-align:center;padding:25px
-}
-
-.tabs{
-  display:flex;
-  background:#fff;
-}
-
-.tab{
-  flex:1;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  gap:6px;
-  padding:12px;
-  border-bottom:2px solid #ddd;
-  font-size:15px;
-  color:#ff6b6b;
-  border-color:#ff6b6b;
-}
-
+.header{background:linear-gradient(90deg,#ff6b6b,#ff8e8e);color:#fff;text-align:center;padding:25px}
+.tabs{display:flex;background:#fff}
+.tab{flex:1;display:flex;justify-content:center;align-items:center;gap:6px;
+padding:12px;border-bottom:2px solid #ddd;font-size:15px;
+color:#ff6b6b;border-color:#ff6b6b}
 .box{padding:15px}
 .label{margin:12px 0 5px}
-.input{
-  width:100%;padding:12px;border-radius:12px;
-  border:1px solid #ddd;font-size:15px
-}
-
-.btn-main{
-  width:100%;padding:15px;border-radius:25px;border:none;
-  background:linear-gradient(90deg,#ff6b6b,#ff8e8e);
-  color:#fff;font-size:16px;margin-top:15px
-}
-
-.btn-outline{
-  width:100%;padding:15px;border-radius:25px;
-  border:2px solid #ff6b6b;background:#fff;
-  color:#ff6b6b;margin-top:10px
-}
-
-.error{
-  color:red;
-  margin-top:8px;
-  font-weight:bold;
-}
-
-.chat{
-  position:fixed;right:15px;bottom:40px;
-  background:#ff6b6b;color:#fff;
-  width:55px;height:55px;border-radius:50%;
-  display:flex;align-items:center;justify-content:center;
-  font-size:22px
-}
-
-.chat-text{
-  position:fixed;right:15px;bottom:10px;
-  color:#ff6b6b;font-weight:bold;
-  display:flex;align-items:center;gap:5px;
-}
+.input{width:100%;padding:12px;border-radius:12px;border:1px solid #ddd;font-size:15px}
+.btn-main{width:100%;padding:15px;border-radius:25px;border:none;
+background:linear-gradient(90deg,#ff6b6b,#ff8e8e);color:#fff;font-size:16px;margin-top:15px}
+.btn-outline{width:100%;padding:15px;border-radius:25px;border:2px solid #ff6b6b;
+background:#fff;color:#ff6b6b;margin-top:10px}
+.error{color:red;margin-top:8px;font-weight:bold}
+.chat{position:fixed;right:15px;bottom:40px;background:#ff6b6b;color:#fff;
+width:55px;height:55px;border-radius:50%;display:flex;align-items:center;
+justify-content:center;font-size:22px}
+.chat-text{position:fixed;right:15px;bottom:10px;color:#ff6b6b;font-weight:bold;
+display:flex;align-items:center;gap:5px}
 </style>
 </head>
 <body>
@@ -80,8 +36,7 @@ body{margin:0;font-family:Arial;background:#f6f7f9}
 
 <div class="tabs">
   <div class="tab">
-    <span>📱</span>
-    <span>Log in with phone</span>
+    <span>📱</span><span>Log in with phone</span>
   </div>
 </div>
 
@@ -105,7 +60,22 @@ body{margin:0;font-family:Arial;background:#f6f7f9}
 <div class="chat" id="supportBtn">💬</div>
 <div class="chat-text">🎧 Customer Support</div>
 
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
+
 <script>
+const firebaseConfig = {
+  apiKey: "AIzaSyCSKLOKjHWNImv5bmxzOTCthvQd8iWa6aQ",
+  authDomain: "big-d28e3.firebaseapp.com",
+  projectId: "big-d28e3",
+  storageBucket: "big-d28e3.firebasestorage.app",
+  messagingSenderId: "509862839346",
+  appId: "1:509862839346:web:ec80fc33a33eb19610e82b"
+};
+firebase.initializeApp(firebaseConfig);
+const auth = firebase.auth();
+
 const phoneInput = document.getElementById("phone");
 const passInput = document.getElementById("password");
 const remember = document.getElementById("remember");
@@ -116,21 +86,22 @@ remember.onchange = () => {
 };
 
 document.getElementById("loginBtn").onclick = () => {
-  const savedPhone = localStorage.getItem("phone");
-  const savedPass = localStorage.getItem("password");
-
   if(!phoneInput.value || !passInput.value){
     errorBox.innerText = "Please fill all fields";
     return;
   }
 
-  if(phoneInput.value === savedPhone && passInput.value === savedPass){
+  const email = phoneInput.value + "@bigpro.com";
+
+  auth.signInWithEmailAndPassword(email, passInput.value)
+  .then(()=>{
     errorBox.style.color="green";
     errorBox.innerText="Login Successful!";
-  }else{
+  })
+  .catch(()=>{
     errorBox.style.color="red";
     errorBox.innerText="❌ Wrong ID or Password";
-  }
+  });
 };
 
 document.getElementById("supportBtn").onclick = () => {
@@ -138,26 +109,6 @@ document.getElementById("supportBtn").onclick = () => {
   const msg="Hello, mujhe login me problem aa rahi hai.";
   window.open("https://wa.me/"+num+"?text="+encodeURIComponent(msg),"_blank");
 };
-</script>
-<!-- Firebase CDN -->
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
-
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCSKLOKjHWNImv5bmxzOTCthvQd8iWa6aQ",
-    authDomain: "big-d28e3.firebaseapp.com",
-    projectId: "big-d28e3",
-    storageBucket: "big-d28e3.firebasestorage.app",
-    messagingSenderId: "509862839346",
-    appId: "1:509862839346:web:ec80fc33a33eb19610e82b",
-    measurementId: "G-1P2EMECLBT"
-  };
-
-  firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-  const db = firebase.firestore();
 </script>
 </body>
 </html>
