--- a/dashboard.html
+++ b/dashboard.html
@@ -1,52 +1,106 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Dashboard</title>
-  <meta charset="UTF-8">
-  <style>
-    body{
-      font-family: Arial;
-      background:#f2f2f2;
-      text-align:center;
-      padding-top:60px;
-    }
-    .box{
-      background:white;
-      width:300px;
-      margin:auto;
-      padding:20px;
-      border-radius:10px;
-      box-shadow:0 0 10px #ccc;
-    }
-    button{
-      background:green;
-      color:white;
-      border:none;
-      padding:10px 20px;
-      cursor:pointer;
-      border-radius:5px;
-    }
-  </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>BIGPRO Dashboard</title>
+<style>
+body{margin:0;font-family:Arial;background:#f4f4f4}
+.header{
+  background:linear-gradient(90deg,#ff9800,#ff5722);
+  color:#fff;text-align:center;padding:20px;font-weight:bold;
+}
+.grid{
+  display:grid;
+  grid-template-columns:repeat(4,1fr);
+  gap:10px;
+  padding:15px;
+}
+.item{
+  background:#fff;
+  border-radius:12px;
+  padding:10px;
+  text-align:center;
+  font-size:13px;
+}
+.item img{width:50px;height:50px}
+
+.card{
+  margin:15px;
+  background:#00bcd4;
+  color:#fff;
+  border-radius:12px;
+  padding:15px;
+}
+.card h3{margin:0 0 5px}
+.member{
+  display:flex;
+  justify-content:space-between;
+  background:#fff;
+  margin:0 15px 10px;
+  padding:10px;
+  border-radius:8px;
+  font-size:14px;
+}
+
+.bottom{
+  position:fixed;
+  bottom:0;left:0;right:0;
+  background:#fff;
+  display:flex;
+  justify-content:space-around;
+  padding:10px 0;
+  border-top:1px solid #ddd;
+}
+.bottom div{text-align:center;font-size:12px;color:#555}
+</style>
 </head>
 <body>
 
-<div class="box">
-  <h2>Welcome to BIGPRO</h2>
-  <p>Login ho chuka hai</p>
-  <button onclick="logout()">Logout</button>
-  <br><br>
-  <br><br>
-<a href="color.html" style="font-size:18px; color:blue;">
-  Go to Color Trading
-</a>
+<div class="header">
+  WELCOME TO BIGPRO<br>
+  Join now and get lots of gifts
 </div>
 
-<script>
-function logout(){
-  alert("Logout ho gaya");
-  window.location.href="login.html";
-}
-</script>
+<div class="grid">
+  <div class="item">🎲<br>Lottery</div>
+  <div class="item">🎰<br>Slots</div>
+  <div class="item">⚽<br>Sports</div>
+  <div class="item">🎥<br>Video</div>
+  <div class="item">🃏<br>Card</div>
+  <div class="item">🐟<br>Fish</div>
+  <div class="item">✨<br>Magic</div>
+  <div class="item">🏆<br>Popular</div>
+</div>
+
+<div class="card">
+  <h3>Win Go</h3>
+  Guess the number, green/red wins
+</div>
+
+<div class="member">
+  <div>MemberDDQLKPP</div>
+  <div>₹196.00</div>
+</div>
+
+<div class="card" style="background:#03a9f4">
+  <h3>K3 Lottery</h3>
+  High/Low/Odd/Even
+</div>
+
+<div class="member">
+  <div>MemberSOWAN12</div>
+  <div>₹47.04</div>
+</div>
+
+<div style="height:70px"></div>
+
+<div class="bottom">
+  <div>🏠<br>Home</div>
+  <div>💰<br>Wallet</div>
+  <div>🎮<br>Play</div>
+  <div>👤<br>Profile</div>
+</div>
 
 </body>
 </html>
