Refactor dashboard styles and layout

--- a/dashboard.html
+++ b/dashboard.html
@@ -4,53 +4,57 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Dashboard</title>
 <style>
-*{box-sizing:border-box;margin:0;padding:0;font-family:Arial}
-body{background:#fff}
+*{box-sizing:border-box;margin:0;padding:0}
+body{background:#fff;font-family:Arial}
 
-/* TOP BAR */
+/* Top */
 .top{
-  background:red;
-  color:white;
+  background:red;color:white;
   text-align:center;
   padding:12px;
   font-size:22px;
   font-weight:bold;
 }
 
-/* BANNER */
+/* Banner */
 .banner{
   margin:12px;
   border:3px solid red;
-  height:120px;
+  height:130px;
   display:flex;
   align-items:center;
   justify-content:center;
-  font-size:30px;
+  font-size:32px;
   font-weight:bold;
 }
 
-/* BUTTON GRID */
-.row{display:flex;gap:10px;margin:10px}
+/* Small rows */
+.row{
+  display:flex;
+  gap:10px;
+  margin:10px;
+}
 .btn{
-  background:red;
-  color:white;
   flex:1;
-  padding:16px;
-  text-align:center;
-  font-size:16px;
-  font-weight:bold;
-  border-radius:6px;
+  height:90px;
+  border-radius:12px;
+  overflow:hidden;
+}
+.btn img{
+  width:100%;
+  height:100%;
+  object-fit:cover;
 }
 
-/* 3 COLUMN GRID */
-.grid3{
+/* 3 column grid */
+.grid{
   display:grid;
   grid-template-columns:repeat(3,1fr);
   gap:10px;
   margin:10px;
 }
 
-/* BIG TILT BUTTONS */
+/* Big slant buttons */
 .bigrow{
   display:flex;
   gap:10px;
@@ -58,46 +62,42 @@ body{background:#fff}
 }
 .bigbtn{
   flex:1;
+  height:150px;
   background:red;
   color:white;
-  height:140px;
   display:flex;
   align-items:center;
   justify-content:center;
   font-size:22px;
   font-weight:bold;
-  transform:skewY(-5deg);
+  transform:skew(-6deg);
 }
 
-/* BOTTOM BAR */
+/* Bottom bar */
 .bottom{
   position:fixed;
   bottom:0;
-  left:0;
   width:100%;
-  background:white;
+  background:#fff;
+  border-top:1px solid #ccc;
   display:flex;
   justify-content:space-around;
+  align-items:center;
   padding:8px 0;
-  border-top:1px solid #ccc;
 }
 .bbtn{
-  background:red;
-  color:white;
-  padding:10px 14px;
-  font-size:12px;
+  width:50px;height:40px;
+  background:red;color:white;
+  display:flex;align-items:center;justify-content:center;
+  font-size:12px;font-weight:bold;
 }
 .invite{
-  background:red;
-  color:white;
-  width:60px;
-  height:60px;
+  width:70px;height:70px;
   border-radius:50%;
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  margin-top:-20px;
+  background:red;color:white;
+  display:flex;align-items:center;justify-content:center;
   font-weight:bold;
+  margin-top:-30px;
 }
 </style>
 </head>
@@ -106,21 +106,20 @@ body{background:#fff}
 <div class="top">MY LOGO</div>
 
 <div class="banner">BANNER</div>
-<div class="slots-box">
-  <img src="Image/Slots.png">
-</div>
+
 <div class="row">
-  <img src="Image/Lottery.png" style="width:100%; height:100%; object-fit:cover; border-radius:10px;"></div>
-  <div class="btn">Game Button</div>
+  <div class="btn"><img src="Image/Lottery.png"></div>
+  <div class="btn"><img src="Image/Slots.png"></div>
 </div>
 
-<div class="grid3">
-  <div class="btn">Game Button</div>
-  <div class="btn">Game Button</div>
-  <div class="btn">Game Button</div>
-  <div class="btn">Game Button</div>
-  <div class="btn">Game Button</div>
-  <div class="btn">Game Button</div>
+<div class="grid">
+  <div class="btn"><img src="Image/Fishing.png"></div>
+  <div class="btn"><img src="Image/Rummy.png"></div>
+  <div class="btn"><img src="Image/Casino.png"></div>
+
+  <div class="btn"><img src="Image/Popular.png"></div>
+  <div class="btn"><img src="Image/Original.png"></div>
+  <div class="btn"><img src="Image/Popular.png"></div>
 </div>
 
 <div class="bigrow">
@@ -128,7 +127,7 @@ body{background:#fff}
   <div class="bigbtn">Game Button</div>
 </div>
 
-<div style="height:100px"></div>
+<br><br><br><br>
 
 <div class="bottom">
   <div class="bbtn">Btn</div>
