Refactor dashboard layout and styles

--- a/dashboard.html
+++ b/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
 <title>Dashboard</title>
 
 <style>
@@ -15,15 +15,16 @@
 
 body{
   background:#fff;
-  padding-bottom:90px;
+  padding-bottom:80px;
 }
 
 /* TOP BAR */
 .top{
-  background:red;
-  color:white;
+  width:100%;
+  background:#ff0000;
+  color:#fff;
   text-align:center;
-  padding:14px;
+  padding:14px 0;
   font-size:22px;
   font-weight:bold;
 }
@@ -44,7 +45,7 @@ body{
 .games{
   display:grid;
   grid-template-columns:repeat(2,1fr);
-  gap:10px;
+  gap:8px;
   padding:10px;
 }
 
@@ -61,19 +62,18 @@ body{
 }
 
 .game img{
-  width:70px;
-  height:auto;
+  width:60px;
 }
 
 .game span{
-  font-size:20px;
+  font-size:18px;
 }
 
 /* 3 GRID */
 .grid3{
   display:grid;
   grid-template-columns:repeat(3,1fr);
-  gap:10px;
+  gap:8px;
   padding:10px;
 }
 
@@ -86,13 +86,13 @@ body{
 
 .big div{
   flex:1;
-  background:red;
+  background:#ff0000;
   color:white;
-  height:140px;
+  height:120px;
   display:flex;
   align-items:center;
   justify-content:center;
-  font-size:22px;
+  font-size:20px;
   font-weight:bold;
   transform:skewX(-6deg);
 }
@@ -103,22 +103,21 @@ body{
   bottom:0;
   left:0;
   width:100%;
-  background:#fff;
+  background:#ffffff;
   border-top:1px solid #ddd;
   display:flex;
   justify-content:space-around;
   align-items:center;
-  padding:8px 0;
+  padding:6px 0;
 }
 
 .bottom img{
-  width:32px;
-  cursor:pointer;
+  width:28px;
 }
 
 .invite{
-  width:60px;
-  height:60px;
+  width:56px;
+  height:56px;
   background:red;
   border-radius:50%;
   display:flex;
@@ -127,7 +126,7 @@ body{
 }
 
 .invite img{
-  width:34px;
+  width:30px;
 }
 </style>
 
@@ -144,7 +143,7 @@ function go(name){
 
 <div class="banner">BANNER</div>
 
-<!-- TOP GAMES -->
+<!-- TOP 2 -->
 <div class="games">
   <div class="game" onclick="go('Lottery')">
     <img src="Image/Lottery.png"><span>LOTTERY</span>
@@ -182,19 +181,19 @@ function go(name){
   </div>
 </div>
 
-<!-- BIG GAME BUTTONS -->
+<!-- BIG -->
 <div class="big">
-  <div onclick="go('Game-1')">Game Button</div>
-  <div onclick="go('Game-2')">Game Button</div>
+  <div onclick="go('Big Game 1')">Game Button</div>
+  <div onclick="go('Big Game 2')">Game Button</div>
 </div>
 
-<!-- BOTTOM BAR -->
+<!-- BOTTOM -->
 <div class="bottom">
   <img src="Image/Home.png" onclick="go('Home')">
   <img src="Image/Activity.png" onclick="go('Activity')">
 
-  <div class="invite">
-    <img src="Image/Invite.png" onclick="go('Invite')">
+  <div class="invite" onclick="go('Invite')">
+    <img src="Image/Invite.png">
   </div>
 
   <img src="Image/Wallet.png" onclick="go('Wallet')">
