Add additional game buttons to dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -122,18 +122,21 @@ body{
   <img src="Image/Banner.png" onerror="this.src='Image/Lottery.png'">
 </div>
 
-<!-- GAME BUTTONS (TOP 2 SAME) -->
-<div class="game-grid">
+<!-- ROW 1 : 2 BUTTON (Lottery & Slots SAME) -->
+<div class="grid-2">
   <div class="game-btn"><img src="Image/Lottery.png"></div>
   <div class="game-btn"><img src="Image/Slots.png"></div>
 </div>
 
-<!-- GAME BUTTONS (NEXT 6 = 3 PER ROW) -->
-<div class="game-grid-3">
+<!-- ROW 2 : 3 BUTTON -->
+<div class="grid-3">
   <div class="game-btn"><img src="Image/Fishing.png"></div>
   <div class="game-btn"><img src="Image/Rummy.png"></div>
   <div class="game-btn"><img src="Image/Casino.png"></div>
+</div>
 
+<!-- ROW 3 : 3 BUTTON -->
+<div class="grid-3">
   <div class="game-btn"><img src="Image/Popular.png"></div>
   <div class="game-btn"><img src="Image/Original.png"></div>
   <div class="game-btn"><img src="Image/Sports.png"></div>
