Refactor game grid styles in dashboard.html

--- a/dashboard.html
+++ b/dashboard.html
@@ -49,15 +49,16 @@ body{
   gap:12px;
   padding:14px;
 }
-.grid-3{
+.game-grid{
   display:grid;
   grid-template-columns:repeat(3,1fr);
-  gap:12px;
-  padding:0 14px 14px;
-  }
+  column-gap:12px;
+  row-gap:6px;
+  padding:14px;
+}
 .game-btn{
   background:transparent;
-  border-radius:20px;
+  border-radius:18px;
   height:110px;
   overflow:hidden;
 }
