Change column-gap to gap in game-grid styles

--- a/dashboard.html
+++ b/dashboard.html
@@ -52,7 +52,7 @@ body{
 .game-grid{
   display:grid;
   grid-template-columns:repeat(3,1fr);
-  column-gap:8px;
+  gap:8px;
   padding:14px;
 }
 .game-btn{
