Fix background color typo in game button

--- a/dashboard.html
+++ b/dashboard.html
@@ -62,7 +62,7 @@ body{
   padding:0 14px 14px;
 }
 .game-btn{
-  background:#e56a6a;
+  background:transperent;
   border-radius:18px;
   height:115px;         /* 🔥 थोड़ा बड़ा */
   overflow:hidden;
