--- a/dashboard.html
+++ b/dashboard.html
@@ -58,10 +58,8 @@ body{
 .game-grid{
   display:grid;
   grid-template-columns:repeat(3,1fr);
-  column-gap:12px;   /* left-right same */
-  row-gap:6px;       /* 🔥 upar-niche space kam */
-  padding:14px;
-  }
+  gap:8px;          /* 🔥 real row + column gap */
+  padding:10px;     /* 🔥 extra white space कम */
 }
 .game-btn{
   background:transperent;
@@ -72,7 +70,7 @@ body{
 .game-btn img{
   width:100%;
   height:100%;
-  object-fit:cover;     /* 🔥 stretch नहीं होगा */
+  object-fit:cobject;    /* 🔥 stretch नहीं होगा */
   display:block;
 }
 
