Update logo image source path in register.html

--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@ align-items:center;justify-content:center;font-size:22px}
 <body>
 
 <div class="top-header">
-  <img src="Mylogo.png" alt="My Logo" class="logo">
+  <img src="../Mylogo.png" alt="My Logo">
   <p class="subtitle">Please register by phone number or email</p>
 </div>
 
