--- a/register.html
+++ b/register.html
@@ -26,7 +26,7 @@ align-items:center;justify-content:center;font-size:22px}
   padding: 25px 0 15px;
   text-align: center;
 }
-
+<img src="Mylogo.png" alt="My Logo">
 .top-header img{
   width: 120px;
   height: auto;
