--- a/register.html
+++ b/register.html
@@ -42,7 +42,7 @@ align-items:center;justify-content:center;font-size:22px}
 <body>
 
 <div class="top-header">
-  <img src="../Mylogo.png" alt="My Logo">
+  <img src="Mylogo.png" alt="My Logo">
   <p class="subtitle">Please register by phone number or email</p>
 </div>
 
