--- a/register.html
+++ b/register.html
@@ -46,7 +46,7 @@ align-items:center;justify-content:center;font-size:22px}
 
 <!-- 🔴 ONLY LOGO FIX IS HERE -->
 <div class="top-header">
-  <img src="../Mylogo.png" alt="My Logo">
+  <img src="Image/Mylogo.png" alt="My Logo">
   <p class="subtitle">Please register by phone number or email</p>
 </div>
 
