--- a/dashboard.html
+++ b/dashboard.html
@@ -120,6 +120,16 @@ body{
   width:72px;
   height:72px;
 }
+.header{
+  background:red;
+  text-align:center;
+  padding:12px 0;
+}
+
+.header .top-logo{
+  height:40px;
+  width:auto;
+}
 </style>
 </head>
 
