--- a/dashboard.html
+++ b/dashboard.html
@@ -177,7 +177,10 @@ body{
   </div>
 
   <div class="nav-item"><img src="Image/Wallet.png"></div>
-  <div class="nav-item"><img src="Image/Account.png"></div>
+  <a href="account.html" class="nav-item">
+  <img src="Account.png">
+  <p>Account</p>
+  </a>
 </div>
 
 </body>
