--- a/dashboard.html
+++ b/dashboard.html
@@ -178,7 +178,7 @@ body{
 
   <div class="nav-item"><img src="Image/Wallet.png"></div>
   <a href="account.html" class="nav-item">
-  <img src="Account.png">
+  <img src="Image/Account.png">
   <p>Account</p>
   </a>
 </div>
